[tool.poetry]
name = "mlflow-setup"
version = "0.1.0"
description = "Python script to perform MLFlow setup on Colab and Jupyter runtime environments"
authors = ["K14aNB <kirnb@protonmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.12.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
